# electronic_shop

./: pyproject.toml
classes/: Phone.py  classes.py  goods.py  keyboard.py  mixins.py
exceptions/: ex_goods.py
tests/: test.py  test_classes.py  test_goods.py  test_keyboard.py  test_mixins.py  test_phone.py
